--- a/index.html
+++ b/index.html
@@ -1,11 +1,93 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>My Website</title>
-  </head>
-  <body>
-    <h1>Welcome to My Website</h1>
-    <p>I sell electronics, shoes, clothes, and jewelry for cheap!</p>
-    <p>Snapchat: @jay_bel5, @noahperiard, @xavier_1529</p>
-  </body>
+<head>
+  <title>Great Deals - Electronics, Shoes & More</title>
+  <style>
+    body {
+      background-color: #f0f0f0;
+      font-family: Arial, sans-serif;
+      text-align: center;
+      padding: 50px;
+    }
+    h1 {
+      color: #333;
+    }
+    h2 {
+      color: #444;
+    }
+    p {
+      color: #555;
+      max-width: 600px;
+      margin: 0 auto 20px;
+    }
+    ul {
+      list-style: none;
+      padding: 0;
+    }
+    li {
+      background: white;
+      margin: 10px auto;
+      padding: 15px;
+      border-radius: 8px;
+      width: 300px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      font-weight: bold;
+    }
+    button {
+      margin: 10px;
+      padding: 10px 20px;
+      font-size: 16px;
+      border: none;
+      border-radius: 5px;
+      background-color: #007bff;
+      color: white;
+      cursor: pointer;
+    }
+    img {
+      border-radius: 10px;
+      margin: 20px 0;
+    }
+    .footer {
+      margin-top: 40px;
+      color: #888;
+      font-size: 14px;
+    }
+  </style>
+</head>
+<body>
+  <h1>Welcome to Our Shop</h1>
+  <p>
+    We offer the best deals on premium electronics, designer shoes, name-brand clothes, and stylish jewelry — all at unbeatable prices.
+  </p>
+  <p>
+    Whether you're looking for the latest iPhone, rare Yeezys, or exclusive fashion items, we've got you covered. Everything is authentic and available for local cash deals.
+  </p>
+
+  <h2>🔥 Popular Products</h2>
+  <ul>
+    <li>Apple iPhones (All Models)</li>
+    <li>Yeezy Boost 350 / Jordans / Nike Dunks</li>
+    <li>Gold & Silver Chains, Custom Watches</li>
+    <li>Supreme, Off-White, Bape, and more</li>
+  </ul>
+
+  <img src="https://via.placeholder.com/300" alt="Sample Product Photo" width="300">
+
+  <h2>📲 Contact Us</h2>
+  <p>Message us on Snapchat to see what’s in stock, ask questions, or make a purchase.</p>
+
+  <a href="https://snapchat.com/add/jay_bel5">
+    <button>@jay_bel5</button>
+  </a>
+  <a href="https://snapchat.com/add/noahperiard">
+    <button>@noahperiard</button>
+  </a>
+  <a href="https://snapchat.com/add/xavier_1529">
+    <button>@xavier_1529</button>
+  </a>
+
+  <div class="footer">
+    © 2025 All rights reserved.
+  </div>
+</body>
 </html>
